--- a/interna/templates/standard/head.inc.utf8.html
+++ b/interna/templates/standard/head.inc.utf8.html
@@ -12,6 +12,7 @@
 	<script src="js/bootstrap.min.js" type="text/javascript" ></script>
 	<script src="js/jquery-ui.min.js" type="text/javascript" ></script>
 	<script src="js/function_back.js" type="text/javascript" ></script>
+	<meta name="csrf-token" content="{$smarty.session.csrf_token|default:''}" />
 	<script src="js/papoo-api.js"></script>
 	<!--
 	<style type="text/css">
